2007-05-08  Brian Cameron  <brian.cameron@sun.com>

	* daemon/verify-pam.c: When we receive PAM_AUTHINFO_UNAVAIL
	  just display the default "authentication failed" message.
	  This ensures that the error message is the same for
	  invalid user and incorrect password, making it harder to
	  tell whether an account is a valid one or not.  Fixes
          bug #436812.  Patch by Lo\357c Minier
	  <lool+gnome@via.ecp.fr>

2007-04-11  Brian Cameron  <brian.cameron@sun.com>

        * daemon/verify-pam.c, daemon/verify-shadow.c, daemon/verify-crypt.c,
          daemon/verify.h, daemon/slave.c: Fix for bug #428630.  This was
          introduced by Ludwig Nussel when he rewrote the way the PAM logic
          works.  If you call gdm_verify_user with a userid, then it will allow
          you to retry 3 times without asking for password again to better
          support the Face Browser.  However, when we ask for root password for
          the configurator, we don't want this behavior.  This patch fixes
          this.

2007-04-09  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.18.1:
        * configure.ac: Update to new release version.
        * NEWS: Updated.
	* gui/gdmflexiserver.c: Report an error message when the gdmcomm_check
	  test fails.

2007-04-09  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter.c, gui/greeter/greeter_ulist.c: Backout
	  change so that greeter Face Browser only works when Browser=true.
	  I don't think it is appropriate to change the interface in a
	  minor release.
	* gui/greeter/themes/circles/circles.xml, 
	  gui/greeter/themes/happygnome/happygnome.xml: Remove userlist
	  from these themes since gdmgreeter does not yet support the
	  BROWSER key.  This will go into 2.20.

2007-04-09  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, daemon/gdm.[ch], gui/gdmlogin.c, gui/gdmcomm.c,
	  gui/gdmXnestchooser.c, gui/greeter/greeter.c:  Deprecated
	  GDM_KEY_PID_FILE and now use /var/run/gdm.pid.  This fixes