@@ -1,3 +1,10 @@
+2007-05-09  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/misc.c: In gdm_fdgetc must used an unsigned char
+	  buffer here because the GUI sends username/password data
+	  as utf8 and the daemon will interpret any character sent
+	  with its high bit set as EOF unless we used unsigned here.
+
 2007-05-08  Brian Cameron  <brian.cameron@sun.com>
 
 	* daemon/verify-pam.c: When we receive PAM_AUTHINFO_UNAVAIL
